--- a/learning26/templates/employee/createEmployeeForm.html
+++ b/learning26/templates/employee/createEmployeeForm.html
@@ -2,6 +2,6 @@
 <a href="{% url 'employeeList'%}">Employee List<a/>
 <form method="POST">
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
     <input type="submit" value="Submit">
 </form>
