--- a/learning26/templates/employee/updateEmployee.html
+++ b/learning26/templates/employee/updateEmployee.html
@@ -1,7 +1,7 @@
-<h1>Course Form</h1>    
-
+<h1>update Employee Form</h1>
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Submit">
 </form>
+    
