Implement user registration feature with custom User model and associated forms, views, and templates.

--- a/learning26/templates/usernavbar.html
+++ b/learning26/templates/usernavbar.html
@@ -12,6 +12,8 @@
         <a href="{% url 'filterEmployee' %}">Filter</a>
         <a href="{% url 'sortEmployee' 1 %}">Ascending</a>
         <a href="{% url 'sortEmployee' 2 %}">Descending</a>
+        <a href="{% url 'service_list' %}">Services</a>
+        <a href="{% url 'create_service' %}">Create Service</a>
 
       </div>
     </nav>
